# vectorxr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  launch-readiness-action-items.md  launch-readiness-roadmap.md  package-lock.json  phase2-refactor-blueprint.md  phase2-roadmap.md  phase3-blueprint.md  project-outline.md
.github/: FUNDING.yml
.github/workflows/: release.yml
.tmp-signature-check/: Quad-Views-Foveated-1.1.3.msi
app/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/src/: App.vue  style.css
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: input_devices.rs  main.rs  openxr_layers.rs
app/src-tauri/windows/: nsis-hooks.nsh
app/src/components/: AppHeader.vue  AppPicker.vue  AppRegistryEditor.vue  BindingConflictWarnings.vue  BindingEditor.vue  ConvergenceField.vue  DebugExportModal.vue  DepthAnchorField.vue  DepthBindingsPage.vue  DepthNetEffect.vue  DeviceBindingEditor.vue  EffectField.vue  HealthCheckModal.vue  ImportPreviewModal.vue  LogViewerModal.vue  ModuleBindingPage.vue  ModuleBindingPanel.vue  PatchNoteList.vue  PatchNotesModal.vue  PivotActivationEditor.vue  PivotBindingsPage.vue  PivotBindingsPanel.vue  PivotSettingsFields.vue  PivotSettingsPage.vue  PivotSettingsSummary.vue  ProfileEditor.vue  ProfileShell.vue  QuadViewsSettingsFields.vue  SeenAppDetailsModal.vue  SidebarNav.vue  StereoDepthField.vue  StickySaveBar.vue  ThemeToggle.vue  TopNavTabs.vue  TurboDiagnosticsPage.vue  TurboRuntimePage.vue
app/src/components/tabs/: AboutTab.vue  CoreTab.vue  DepthXrTab.vue  HomeTab.vue  OpenXrLayersTab.vue  PerformanceMonitoringTab.vue  PivotXrTab.vue  QuadViewsTab.vue  TurboTab.vue
app/src/lib/: commands.ts  debugPackage.ts  display.ts  health.ts  model.ts  patchNotes.json  patchNotes.ts  theme.ts  updates.ts  validation.ts
app/src/stores/: configStore.ts  updateStore.ts
app/tests/: display.test.mjs  model.test.mjs  patchNotes.test.mjs
config/: README.md  depthxr.schema.json  vectorxr.schema.json
docs/: architecture.md  bootstrap.md  home-onboarding-banner.md  licensing.md  openxr-layer-management-implementation.md  openxr-layer-management-outline.md  performance-monitoring-design.md  pivotxr-spike.md  quadviews-development.md  quadviews-native-design.md  quadviews-ui-next-pass.md  runtime-hardening.md  seen-apps-design.md  turbo-pacing.md  usage.md
examples/: depthxr.settings.example.json  vectorxr.settings.example.json
layer/: CMakeLists.txt
layer/include/depthxr/: config_parser.h  config_path.h  depth_submission.h  effects.h  input_devices.h  logger.h  openxr_layer.h  openxr_loader_api_layer.h  pivot_routing.h  process_info.h  quadviews_recovery.h  quadviews_sizing.h  runtime_compatibility.h  runtime_pacing.h  seen_apps.h  settings.h  settings_resolver.h  sound_player.h  swapchain_state.h  turbo_metrics.h
layer/manifest/: XR_APILAYER_DIENERTECH_VECTORXR.json  XR_APILAYER_NOVENDOR_depthxr.json
layer/src/: config_parser.cpp  input_devices.cpp  layer_entry.cpp  openxr_layer.cpp  quadviews_sizing.cpp  runtime_compatibility.cpp  runtime_pacing.cpp  seen_apps.cpp  settings.cpp  settings_resolver.cpp  sound_player.cpp  swapchain_state.cpp  turbo_metrics.cpp
layer/src/math/: convergence.cpp  depth_submission.cpp  fov_scale.cpp  pivot_yaw.cpp  stereo_boost.cpp  world_scale.cpp
layer/src/util/: config_path.cpp  logger.cpp  process_info.cpp
layer/tests/: config_tests.cpp
release/notes/: v0.13.5.md  v0.13.6.md  v0.13.7.md  v0.14.0.md
scripts/: Assert-VersionMatchesTag.ps1  Build-And-Install-Layer.ps1  Build-Installer.ps1  Build-Layer.ps1  Generate-TauriIcons.ps1  Install-Layer.ps1  Set-Version.ps1  Stage-ReleasePayload.ps1  Uninstall-Layer.ps1  _VersionFiles.ps1  generate-default-sounds.mjs
test-seen-app-observations/: seen-apps.json
