[package]
name = "vectorxr-app"
version = "0.5.1"
description = "VectorXR configuration app"
authors = ["mdiener"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
] }
